--- a/Homepage.html
+++ b/Homepage.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href="Homepage.html">HOME</a></li>
                 <li><a href="Register.html">REGISTER</a></li>
-                <li><a href="Login.html">SIGN IN</a></li>
+                <li><a href="index.html">SIGN IN</a></li>
             </ul>
         </nav>
 
