--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Allpage.css">
-    <title>Login Form</title>
+    <title>Homepage</title>
 </head>
 <body>
     <div class="wrapper">
@@ -20,28 +20,24 @@
             </ul>
         </nav>
 
-        <div class="form-container">
-            <form id="login-form">
-                <h1>Note<span>It!</span></h1>
-                <div class="input-box">
-                    <input type="text" placeholder="Username">
+        <div class="homepage-content">
+            <div class="left">
+                <img src="images/kids.png" alt="logo">
+            </div>
+            <div class="right">
+                <h2>Note<span>It!</span></h2>
+                <p>
+                  Meet NoteIt!, the modernized app that makes note-taking down a breeze.<br>
+                  Jot down ideas effortlessly, organize them with ease,<br>
+                  and retrieve information lightning fast.<br>
+                  Its customized formatting options and ideal sharing capabilities<br>
+                  make NoteIt! an indispensable tool for maximizing your efficiency.
+                </p>
+                <div class="button">
+                    <a href="Login.html"><button class="primary button"> Sign In</button></a>
                 </div>
-                <div class="input-box">
-                    <input type="password" placeholder="Password">
-                </div>
-                <div class="remember-forgot">
-                    <label><input type="checkbox">Remember Me</label>
-                    <a href="#">Forgot Password?</a>
-                </div>
-               <button type="submit" class="btn">Sign In</button>
-            </form>
+            </div>
         </div>
     </div>
-    <script>
-    document.getElementById('login-form').addEventListener('submit', function(e) {
-        e.preventDefault();
-        window.location.href = 'Dashboard.html';
-    });
-    </script>
 </body>
 </html>
